# IQKit

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md
docs/: design.md  index.md  letter-garmin.md  letter-users.md  letter_garmin.md  simulator-testing.md  spec.md  tutorial.md
examples/reference-watchface/: manifest.xml  monkey.jungle
examples/reference-watchface/resources/strings/: strings.xml
examples/reference-watchface/source/: IQKitTestWatchFace.mc
harness/: __init__.py  __main__.py  devices.json  geometry.py  input_router.py  layout.py  preview.py  pyproject.toml  renderer.py  theme.py
harness/components/: __init__.py  arc_list.py  arc_progress_bar.py  centre_metric.py  circular_menu.py  confirm_dialog.py
src/: IQKit.mc
src/components/: IQKitArcList.mc  IQKitArcProgressBar.mc  IQKitCentreMetric.mc  IQKitCircularMenu.mc  IQKitConfirmDialog.mc
src/foundation/: IQKitGeometry.mc  IQKitInputRouter.mc  IQKitLayout.mc  IQKitTheme.mc
