[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iqkit-harness"
version = "0.1.0"
description = "Python design harness for IQKit -- Garmin Connect IQ component library"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Jose Alonso Solis Lemus" },
]

dependencies = [
    "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["harness*"]
